--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-application.properties
-
+application-db.properties
 ### STS ###
 .apt_generated
 .classpath
