--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 application-db_url.properties
 application-db_pw.properties
 application-db_user.properties
+application-jwt_key.properties
 ### STS ###
 .apt_generated
 .classpath
