--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     // web socket
     implementation 'org.springframework.boot:spring-boot-starter-websocket:2.7.5'
+    // h2
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
