--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.profiles.include=db_url,db_pw,db_user,jwt_key
+spring.profiles.include=db_url,db_pw,db_user,jwt_key,h2
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 spring.jpa.hibernate.ddl-auto=update
+
+
