--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
 
 
+## H2 GameLogic Database
+#spring.second-datasource.driver-class-name=org.h2.Driver
+spring.second-datasource.jdbcUrl=jdbc:h2:~/cukcoo;Mode=MySQL
+spring.second-datasource.username=sa
+spring.second-datasource.password=
