--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,16 @@ server.servlet.encoding.charset=utf-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 spring.jpa.hibernate.ddl-auto=update
+
+# hibernate.X
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+hibernate.show_sql=false
+hibernate.hbm2ddl.auto=update
+hibernate.cache.use_second_level_cache=false
+hibernate.cache.use_query_cache=false
+
+## H2 GameLogic Database
+spring.second-datasource.jdbcUrl=jdbc:h2:mem:cuckoo;Mode=MySQL
+spring.second-datasource.username=sa
+spring.second-datasource.password=
